fixed overlaps

--- a/src/components/forum/Forum.css
+++ b/src/components/forum/Forum.css
@@ -2,7 +2,6 @@
     padding-left: .2em;
     padding-bottom: .4em;
     padding-top: .3em;
-    height: 100px;
 }
 
 
