--- a/src/components/forum/ForumPostDetails.css
+++ b/src/components/forum/ForumPostDetails.css
@@ -4,7 +4,6 @@
 
 .post__detail__link:hover {
     color: black !important;
-    text-decoration: underline;
   }
 
 .forumpost__header {
